--- a/app/src/main/res/layout/fragment_carteira.xml
+++ b/app/src/main/res/layout/fragment_carteira.xml
@@ -1,23 +1,22 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tvSaldo"
+        android:id="@+id/tv_saldo_carteira_fragment_"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvCarteira"
+        android:layout_below="@+id/tv_carteira_fragment_carteira"
         android:background="@color/colorPrimary"
         android:text="Saldo da carteira"
         android:textColor="@color/abc_primary_text_material_dark" />
 
     <TextView
-        android:id="@+id/tvCarteira"
+        android:id="@+id/tv_carteira_fragment_carteira"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_above="@+id/tvSaldo"
         android:background="@color/colorPrimary"
         android:text="R$: 0,00"
         android:textColor="@color/abc_primary_text_material_dark"
@@ -26,7 +25,7 @@
 
 
     <ListView
-        android:id="@+id/lv_menu"
+        android:id="@+id/lv_itens_carteira"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:choiceMode="singleChoice"
