--- a/app/src/main/res/layout/activity_tela_recarga.xml
+++ b/app/src/main/res/layout/activity_tela_recarga.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context="com.positivo.rafaellcarloss.apppositivo.TelaRecarga">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/tb_main"
+        android:id="@+id/tb_main_recarga"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_alignParentLeft="true"
@@ -15,16 +15,5 @@
         android:minHeight="?attr/actionBarSize"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-    <!--FrameLayout
-        android:id="@+id/frame"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tb_main"></FrameLayout -->
-
-    <RelativeLayout
-        android:id="@+id/rl_fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tb_main"></RelativeLayout>
 
 </RelativeLayout>
