--- a/app/src/main/res/layout/item_carteira.xml
+++ b/app/src/main/res/layout/item_carteira.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="100dp"
     android:orientation="vertical">
 
 
@@ -18,8 +18,18 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Titulo"
+        android:textColor="#000000"
         android:id="@+id/tv_titulo_item_fragment_carteira"
         android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/iv_carteira_item_fragment"
+        android:layout_toEndOf="@+id/iv_carteira_item_fragment" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Descricao"
+        android:id="@+id/tv_descricao_item_fragment_carteira"
+        android:layout_below="@+id/tv_titulo_item_fragment_carteira"
         android:layout_toRightOf="@+id/iv_carteira_item_fragment"
         android:layout_toEndOf="@+id/iv_carteira_item_fragment" />
 </RelativeLayout>
