--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
 
     <color name="colorPrimaryLight">#00c9af</color>
     <color name="colorPrimary">#D32F2F</color>
-    <color name="colorPrimaryDark">#00796B</color>
+    <color name="colorPrimaryDark">#8B0000</color>
     <color name="colorPrimarytext">#212121</color>
     <color name="colorSecondText">#999</color>
     <color name="coloLink">#1ea4f7</color>
