--- a/app/src/main/res/layout/item_carteira.xml
+++ b/app/src/main/res/layout/item_carteira.xml
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="130dp"
     android:orientation="vertical">
 
 
     <ImageView
+        android:id="@+id/iv_carteira_item_fragment"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:id="@+id/iv_carteira_item_fragment"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
     <TextView
+        android:id="@+id/tv_titulo_item_fragment_carteira"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Titulo"
-        android:textColor="#000000"
-        android:id="@+id/tv_titulo_item_fragment_carteira"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/iv_carteira_item_fragment"
         android:layout_toEndOf="@+id/iv_carteira_item_fragment"
+        android:layout_toRightOf="@+id/iv_carteira_item_fragment"
+        android:paddingLeft="10dp"
+        android:text="Titulo"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#000000"
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/tv_descricao_item_fragment_carteira"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Descricao"
-        android:id="@+id/tv_descricao_item_fragment_carteira"
         android:layout_below="@+id/tv_titulo_item_fragment_carteira"
+        android:layout_toEndOf="@+id/iv_carteira_item_fragment"
         android:layout_toRightOf="@+id/iv_carteira_item_fragment"
-        android:layout_toEndOf="@+id/iv_carteira_item_fragment" />
+        android:paddingLeft="10dp"
+        android:text="Descricao"
+        android:textColor="#000000" />
 </RelativeLayout>
