--- a/app/src/main/res/layout/activity_tela_adiciona_numero.xml
+++ b/app/src/main/res/layout/activity_tela_adiciona_numero.xml
@@ -3,10 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.positivo.rafaellcarloss.apppositivo.TelaRecarga">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.positivo.rafaellcarloss.apppositivo.TelaAdicionaNumero">
+
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/tb_main_recarga"
+        android:id="@+id/tb_tela_add_numero"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_alignParentLeft="true"
@@ -16,27 +19,24 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     <Button
-        android:id="@+id/bt_add_novo_numero_tela_recarga"
+        android:id="@+id/bt_add_numero_contatos_tela_add_numero"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/tb_main_recarga"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
-        android:drawableLeft="@drawable/ic_mais_web"
-        android:drawablePadding="-60dp"
-        android:text="Adicionar Novo Número" />
+        android:layout_below="@+id/tb_tela_add_numero"
+        android:layout_centerHorizontal="true"
+        android:text="ADICIONAR NÚMERO DOS CONTATOS" />
 
-    <TextView
-        android:id="@+id/tv_numeros_frequentes_tela_recarga"
+    <EditText
+        android:id="@+id/et_ddd_tela_add_numero"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/bt_add_novo_numero_tela_recarga"
-        android:text="Numeros Frequentes"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#000000" />
+        android:layout_below="@+id/bt_add_numero_contatos_tela_add_numero"
+        android:hint="DDD"
+        android:inputType="number"
+        android:textColor="#000000"
+        android:textColorHint="#000000" />
+
 
 </RelativeLayout>
