--- a/app/src/main/res/layout/activity_tela_adiciona_numero.xml
+++ b/app/src/main/res/layout/activity_tela_adiciona_numero.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.positivo.rafaellcarloss.apppositivo.TelaAdicionaNumero">
 
 
@@ -28,15 +27,63 @@
 
     <EditText
         android:id="@+id/et_ddd_tela_add_numero"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/bt_add_numero_contatos_tela_add_numero"
+        android:layout_marginTop="15dp"
         android:hint="DDD"
         android:inputType="number"
         android:textColor="#000000"
+        android:textColorHint="#000000"
+        android:gravity="top" />
+
+    <EditText
+        android:id="@+id/et_numero_tela_add_numero"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/bt_add_numero_contatos_tela_add_numero"
+        android:layout_marginTop="15dp"
+        android:layout_toEndOf="@+id/et_ddd_tela_add_numero"
+        android:layout_toRightOf="@+id/et_ddd_tela_add_numero"
+        android:hint="TELEFONE"
+        android:paddingLeft="10dp"
+        android:textAlignment="center"
+        android:textColor="#000000"
         android:textColorHint="#000000" />
+
+    <EditText
+        android:id="@+id/et_nome_contato_tela_add_numero"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/et_numero_tela_add_numero"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:ems="10"
+        android:hint="Nome do contato(opcional)"
+        android:inputType="textPersonName"
+        android:textColor="#000000"
+        android:textColorHint="#000000" />
+
+    <Button
+        android:id="@+id/bt_continuar_tela_add_numero"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/et_nome_contato_tela_add_numero"
+        android:text="Continuar" />
+
+    <ImageView
+        android:id="@+id/ib_icone_confirmar_tela_add_numero"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_alignBottom="@+id/tb_tela_add_numero"
+        android:layout_alignEnd="@+id/tb_tela_add_numero"
+        android:layout_alignRight="@+id/tb_tela_add_numero"
+        android:src="@drawable/ic_confirmar" />
 
 
 </RelativeLayout>
