--- a/app/src/main/res/layout/item_carteira.xml
+++ b/app/src/main/res/layout/item_carteira.xml
@@ -1,39 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="130dp"
+    android:layout_height="100dp"
     android:orientation="vertical">
 
-
-    <ImageView
-        android:id="@+id/iv_carteira_item_fragment"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
-
-    <TextView
-        android:id="@+id/tv_titulo_item_fragment_carteira"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/iv_carteira_item_fragment"
-        android:layout_toRightOf="@+id/iv_carteira_item_fragment"
-        android:paddingLeft="10dp"
-        android:text="Titulo"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#000000"
-        android:textStyle="bold" />
+        android:layout_height="130dp"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_descricao_item_fragment_carteira"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_titulo_item_fragment_carteira"
-        android:layout_toEndOf="@+id/iv_carteira_item_fragment"
-        android:layout_toRightOf="@+id/iv_carteira_item_fragment"
-        android:paddingLeft="10dp"
-        android:text="Descricao"
-        android:textColor="#000000" />
-</RelativeLayout>
+
+        <ImageView
+            android:id="@+id/iv_carteira_item_fragment"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true" />
+
+        <TextView
+            android:id="@+id/tv_titulo_item_fragment_carteira"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/iv_carteira_item_fragment"
+            android:layout_toRightOf="@+id/iv_carteira_item_fragment"
+            android:paddingLeft="10dp"
+            android:text="Titulo"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#000000"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_descricao_item_fragment_carteira"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_titulo_item_fragment_carteira"
+            android:layout_toEndOf="@+id/iv_carteira_item_fragment"
+            android:layout_toRightOf="@+id/iv_carteira_item_fragment"
+            android:paddingLeft="10dp"
+            android:text="Descricao"
+            android:textColor="#000000" />
+    </RelativeLayout>
+
+    <View
+        android:id="@+id/view_divider_item_carteira"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="60dp"
+        android:background="@color/colorPrimary">
+
+    </View>
+
+</LinearLayout>
