--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -41,5 +41,6 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginLeft="60dp"
-        android:background="@color/colorPrimary"></View>
+        android:background="@color/colorPrimary">
+    </View>
 </LinearLayout>
