--- a/app/src/main/res/layout/activity_tela_adiciona_numero.xml
+++ b/app/src/main/res/layout/activity_tela_adiciona_numero.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.positivo.rafaellcarloss.apppositivo.TelaAdicionaNumero">
 
@@ -33,11 +34,11 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/bt_add_numero_contatos_tela_add_numero"
         android:layout_marginTop="15dp"
+        android:gravity="top"
         android:hint="DDD"
         android:inputType="number"
         android:textColor="#000000"
-        android:textColorHint="#000000"
-        android:gravity="top" />
+        android:textColorHint="#000000" />
 
     <EditText
         android:id="@+id/et_numero_tela_add_numero"
@@ -79,10 +80,10 @@
         android:id="@+id/ib_icone_confirmar_tela_add_numero"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:layout_alignBottom="@+id/tb_tela_add_numero"
         android:layout_alignEnd="@+id/tb_tela_add_numero"
         android:layout_alignRight="@+id/tb_tela_add_numero"
+        android:layout_marginBottom="10dp"
         android:src="@drawable/ic_confirmar" />
 
 
