--- a/app/src/main/res/layout/activity_tela_inicial.xml
+++ b/app/src/main/res/layout/activity_tela_inicial.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="54dp"
+                android:layout_marginTop="74dp"
                 android:paddingTop="4dp"
                 android:src="@drawable/ic_lampada_cifrao" />
 
@@ -50,14 +50,13 @@
 
             <Button
                 android:id="@+id/btLogarFacebook"
-                android:layout_width="match_parent"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_below="@+id/tvBemVindo"
+                android:layout_centerHorizontal="true"
                 android:layout_marginTop="120dp"
                 android:background="@drawable/screen_border"
-                android:backgroundTint="#4969ff"
+                android:backgroundTint="#4682B4"
                 android:drawableLeft="@drawable/ic_facebook"
                 android:drawablePadding="-60dp"
                 android:paddingBottom="5dp"
@@ -69,12 +68,12 @@
 
             <Button
                 android:id="@+id/btLogarComEmail"
-                android:layout_width="match_parent"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
+                android:layout_alignLeft="@+id/btLogarFacebook"
+                android:layout_alignStart="@+id/btLogarFacebook"
                 android:layout_below="@+id/btLogarFacebook"
-                android:layout_marginTop="44dp"
+                android:layout_marginTop="48dp"
                 android:background="@drawable/screen_border_botao"
                 android:text="Entrar com E-mail"
                 android:textColor="#fefffa" />
