--- a/app/src/main/res/layout/activity_activity_tela_login_email.xml
+++ b/app/src/main/res/layout/activity_activity_tela_login_email.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context="com.positivo.rafaellcarloss.apppositivo.ActivityTelaLoginEmail">
 
     <android.support.v7.widget.Toolbar
@@ -16,10 +17,12 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     <ScrollView
+        android:id="@+id/scroll_view_tela_login_email"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <RelativeLayout
+            android:id="@+id/rl_elementos_tela_login_email"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -31,7 +34,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="74dp"
-                android:paddingTop="4dp"
+                android:paddingTop="10dp"
                 android:src="@drawable/ic_lampada_cifrao" />
 
             <TextView
@@ -47,31 +50,20 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/et_nome_tela_login_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textView2"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="52dp"
-                android:hint="Nome"
-                android:textColor="#000000"
-                android:textColorHint="#000000"
-                android:textSize="25dp" />
-
-            <EditText
                 android:id="@+id/et_email_tela_login_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/et_nome_tela_login_email"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="10dp"
                 android:ems="10"
                 android:hint="E-mail"
                 android:inputType="textEmailAddress"
                 android:textColor="#000000"
                 android:textColorHint="#000000"
-                android:textSize="25dp" />
+                android:textSize="25dp"
+                android:layout_below="@+id/tv_cadastrar_tela_login_email"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="40dp"
+                android:backgroundTint="@color/colorPrimary" />
 
             <EditText
                 android:id="@+id/et_senha_tela_login_email"
@@ -94,7 +86,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/et_senha_tela_login_email"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="20dp"
                 android:layout_marginTop="65dp"
                 android:padding="10dp"
                 android:text="Entrar"
