--- a/app/src/main/res/layout/activity_activity_tela_login_email.xml
+++ b/app/src/main/res/layout/activity_activity_tela_login_email.xml
@@ -53,17 +53,18 @@
                 android:id="@+id/et_email_tela_login_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/tv_cadastrar_tela_login_email"
+                android:layout_marginTop="40dp"
+                android:background="@drawable/editext_selector"
+                android:backgroundTint="@color/colorPrimary"
                 android:ems="10"
                 android:hint="E-mail"
                 android:inputType="textEmailAddress"
                 android:textColor="#000000"
                 android:textColorHint="#000000"
-                android:textSize="25dp"
-                android:layout_below="@+id/tv_cadastrar_tela_login_email"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="40dp"
-                android:backgroundTint="@color/colorPrimary" />
+                android:textSize="25dp" />
 
             <EditText
                 android:id="@+id/et_senha_tela_login_email"
