--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
         <!-- You can also set colorControlNormal, colorControlActivated
              colorControlHighlight, and colorSwitchThumbNormal. -->
 
+        <item name="material_drawer_divider">@color/colorPrimary</item>
         <item name="colorControlNormal">@android:color/white</item>
 
         <!-- MaterialDrawer specific values -->
