--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="colorSecondText">#999</color>
     <color name="coloLink">#1ea4f7</color>
     <color name="colorDivider">#ccc</color>
+    <color name="colorFundoFeedback" > #9E9E9E</color>
 
     <color name="colorAccent">#795548</color>
 
