--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,8 +27,11 @@
     </style>
 
     <style name="MyAlertDialog" parent="MaterialDrawerBaseTheme.Light.Dialog">
-        <item name="android:windowBackground">@null</item>
+        <item name="android:windowBackground">@color/colorAccent</item>
+        <item name="android:dialogMessage">@android:color/black</item>
         <item name="android:background">@null</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:headerBackground">@color/colorPrimary</item>
         <item name="android:padding">0dp</item>
     </style>
 
