--- a/app/src/main/res/layout/activity_activity_tela_cadastro_email.xml
+++ b/app/src/main/res/layout/activity_activity_tela_cadastro_email.xml
@@ -4,20 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.positivo.rafaellcarloss.apppositivo.ActivityTelaCadastroEmail">
-
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/tb_activity_tela_cadastro_email"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_alignParentLeft="true"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
-        android:minHeight="?attr/actionBarSize"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
+     
 
     <ScrollView
         android:id="@+id/scroll_view_tela_cadastro_email"
@@ -29,6 +19,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/tb_activity_tela_cadastro_email"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_alignParentLeft="true"
+                android:background="?attr/colorPrimary"
+                android:elevation="4dp"
+                android:minHeight="?attr/actionBarSize"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
 
             <ImageView
