--- a/app/src/main/res/layout/activity_tela_inicial.xml
+++ b/app/src/main/res/layout/activity_tela_inicial.xml
@@ -48,11 +48,20 @@
                 android:textColor="#010101"
                 android:textSize="20dp" />
 
+            <LinearLayout
+                android:id="@+id/container"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_above="@+id/tvBemVindo"
+                android:orientation="vertical">
+
+            </LinearLayout>
+
             <Button
                 android:id="@+id/btLogarFacebook"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tvBemVindo"
+                android:layout_below="@+id/container"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="120dp"
                 android:background="@drawable/screen_border"
