--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="colorSecondText">#999</color>
     <color name="coloLink">#1ea4f7</color>
     <color name="colorDivider">#ccc</color>
-    <color name="colorFundoFeedback">#9E9E9E</color>
+    <color name="colorFundoFeedback">#F5F5F5</color>
 
     <color name="iron">#CCCCCC</color>
     <color name="white">#FFFFFF</color>
