#5 - Criação da tela de recarga.

--- a/app/src/main/res/layout/activity_recarga.xml
+++ b/app/src/main/res/layout/activity_recarga.xml
@@ -25,7 +25,7 @@
         android:layout_below="@+id/tb_recarga"
         android:text="Operadora"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#753131"
+        android:textColor="#762f2f"
         android:textStyle="bold" />
 
     <Spinner
